<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_centerName"
            style="@style/textView_Style"
            android:drawableLeft="@drawable/ic_hospital"
            android:text="@string/center_name" />

        <TextView
            android:id="@+id/tv_center_location"
            style="@style/textView_Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_centerName"
            android:drawableLeft="@drawable/ic_location"
            android:text="@string/center_location" />

        <TextView
            android:id="@+id/tv_timings"
            style="@style/textView_Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_center_location"
            android:drawableLeft="@drawable/ic_time"
            android:text="@string/timings" />

        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_timings"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_vaccineName"
                style="@style/textView_Style"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_vaccine"
                android:text="@string/vaccine_name" />

            <TextView
                android:id="@+id/tv_vaccineFees"
                style="@style/textView_Style"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/vaccine_fees"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout1"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_ageLimit"
                style="@style/textView_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/age_limit"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_vaccineAvailability"
                style="@style/textView_Style"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vaccine_availability"
                android:textAlignment="center" />
        </LinearLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>